# L2-UD

./: .gitignore  Align.hs  ErrorPatterns.hs  Errors.hs  Extract.hs  GUI.md  L2UD.hs  Main.hs  Markdown.hs  Match.hs  Output.hs  README.md  SweLL_mappings.md  UD.hs  UDPatternManipulations.hs  Utils.hs  VALICO_mappings.md  experiments.sh  l2-ud-gui.desktop  l2-ud-gui.ps1  l2-ud.cabal  notes.txt  out.txt  stack.yaml  win_notes.md
HUMINFRA_experiments/: en-sv.tsv  it_query_sv_patterns.hs  it_query_sv_results.conllu  it_sv.md  ja-sv.tsv  sv-en.tsv  sv_query_it_patterns.hs  sv_query_it_results.conllu  tmp2tsv.py
examples/: L1-L2.m2  L1-L2.stx.m2  L1.conllu  L1.txt  L2.conllu  L2.txt
notes/: extracted_patterns_with_comments.md
queries/: IDG.qs  IDG.query  ING.query  IVN.query  M-Case.query  M-Def-agr.query  M-Def.query  RD-nessun-un.query  number_agreement.query  sv_typical_WO.query  wrong_case_acc_nom_after_adp.query
queries/es/: futuro.query
queries/it/: MD-example.query  RD-nessun-un1.query
queries/sv/: M-Adj-adv.query  S-FinV-example.query  presens_perfekt.query
replacements/: only_v_patterns.hs
results/: eval.py
results/it/: IDG.md  IDG.txt  IDG1.md  IDG1.txt  IDG1_expected1.txt  IDG_expected.txt  IDG_expected1.txt  ING.md  ING.txt  IVN.md  MD-example.md  MD-example_expected.txt  MD.md  MD.txt  RD-nessun-un-expected.txt  RD-nessun-un1.md
results/sv/: M-ADJ-ADV.md  M-ADJ-ADV.txt  M-Case-expected.txt  M-Case.md  M-Case.txt  M-Def-agr-expected.txt  M-Def-agr.md  M-Def-agr.txt  M-Def.md  M-Def.txt  M-Def_expected.txt  S-FinV-example-expected.txt  S-FinV-example.md  S-FinV-example.txt  S-FinV-example_expected.txt  test.md
src/: Align.hs  Annotate.hs  BEA.hs  Electron.hs  Errors.hs  Extract.hs  GUI.hs  Main.hs  Match.hs  electron.js  package.json
src/Utils/: Markdown.hs  Misc.hs  Output.hs  UDConcepts.hs  UDPatterns.hs
static/css/: style.css
