name: l2-ud
version: 0
synopsis: tools for analyzing (L1-)L2 UD treebanks
description: a set of tools for analyzing (parallel L1-)L2 UD treebanks
-- license: BSD2
-- license-file: LICENSE
author: Arianna Masciolini
maintainer: arianna.masciolini@gu.se
category: Language
build-type: Simple
extra-source-files: README.md
-- copied from concept-alignment, probably arbitrary
cabal-version: >= 1.10 

executable l2-ud
    main-is: Main.hs
    other-modules: Errors, Align, Extract, Match, Utils, Markdown, Output
    build-depends:
        base,
        extra,
        containers,
        data-ordlist,
        gf-ud,
        concept-alignment,
        regex-posix,
        split,
        directory,
        filepath,
        MissingH
    default-language: Haskell2010