name: l2-ud
version: 0
synopsis: tools for analyzing (L1-)L2 UD treebanks
description: a set of tools for analyzing (parallel L1-)L2 UD treebanks
license: BSD2
license-file: LICENSE
author: Arianna Masciolini
maintainer: arianna.masciolini@gu.se
category: Language
build-type: Simple
extra-source-files: README.md
-- copied from concept-alignment, probably arbitrary
cabal-version: >= 1.10 

executable l2-ud
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: 
        Errors, 
        Align, 
        Extract, 
        Match, 
        Annotate,
        Utils.Misc, 
        Utils.Output,
        Utils.UDPatterns,
        Utils.UDConcepts
    build-depends:
        base,
        extra,
        containers,
        data-ordlist,
        gf-ud,
        concept-alignment,
        regex-posix,
        split,
        directory,
        filepath,
        MissingH,
        hs-md,
        curl,
        aeson,
        utf8-string
    default-language: Haskell2010

executable l2-ud-gui
    hs-source-dirs: src
    main-is: GUI.hs
    other-modules:
        Align,
        Match,
        Errors,
        Utils.Output,
        Utils.UDConcepts,
        Utils.UDPatterns,
        Utils.Misc
    build-depends:
        base, 
        extra,
        containers,
        split,
        directory,
        regex-posix,
        MissingH,
        threepenny-gui,
        gf-ud,
        concept-alignment,
        hs-md
    default-language: Haskell2010
    ghc-options: -main-is GUI